src/objects/FAQArticle__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <page>FaqPkbView</page>
            <template>Page</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Attachment2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment4__c</fullName>
        <label>Attachment 4</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ContentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FAQ_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InitialArticleApprover__c</fullName>
        <label>Initial Article Approver</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLDId__c</fullName>
        <label>OLD_Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>FAQ Article</label>
    <pluralLabel>FAQ Articles</pluralLabel>
</CustomObject>